--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,5 @@
 [versions]
 agp = "9.0.0"
-datastorePreferences = "1.2.0"
-gson = "2.13.2"
-hiltAndroid = "2.58"
-hiltNavigationCompose = "1.3.0"
 kotlin = "2.3.0"
 coreKtx = "1.17.0"
 junit = "4.13.2"
@@ -12,8 +8,14 @@ espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.10.0"
 activityCompose = "1.12.3"
 composeBom = "2026.01.01"
+
+datastorePreferences = "1.2.0"
+gson = "2.13.2"
+hiltAndroid = "2.59.1"
+hiltNavigationCompose = "1.3.0"
 lifecycleViewmodelCompose = "2.10.0"
 materialIconsExtended = "1.7.8"
+ksp = "2.3.2"
 okhttp = "5.3.2"
 animation = "1.10.2"
 navigationTesting = "2.9.7"
@@ -49,4 +51,5 @@ androidx-navigation-testing = { group = "androidx.navigation", name = "navigatio
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hiltAndroid" }
