--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:tools="http://schemas.android.com/tools"
+	xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,9 +11,11 @@
 		android:fullBackupContent="@xml/backup_rules"
 		android:icon="@mipmap/idlgs_logo_png"
 		android:label="@string/app_name"
+		android:localeConfig="@xml/locale_config"
 		android:roundIcon="@mipmap/idlgs_logo_png_round"
 		android:supportsRtl="true"
-		android:theme="@style/Theme.IDLGS">
+		android:theme="@style/Theme.IDLGS"
+		tools:targetApi="33">
 
 		<activity
 			android:name=".MainActivity"
